assets/styles/layout/_header.scss
header {
	background-color: var(--header-bg-color);
	grid-column: 1 / span 3;
	.topbar {
		display: grid;
		grid-template-rows: 1fr;
		grid-column-gap: 0px;
		grid-row-gap: 0px;
		height: 100%;
		@media screen and (max-width: 768px) {
			grid-template-rows: 3fr 2fr;
		}
		&__logo {
			color: var(--tertiary-color);
			display: flex;
			gap: 15px;
			padding: 0 30px;
			align-items: center;
			justify-content: center;
			font-size: 22px;
			letter-spacing: 0.1rem;
			strong {
				color: #ecf0f1;
			}
		}
		&__nav {
			grid-column-start: 2;
			@media screen and (max-width: 768px) {
				grid-column-start: inherit;
				grid-row-start: 2;
			}
			overflow: auto;
			ul {
				display: flex;
				justify-content: center;
				align-items: center;
				height: 100%;
				@media screen and (min-width: 768px) and (max-width: 992px) {
					justify-content: left;
				}
				@media screen and (max-width: 380px) {
					justify-content: flex-start;
				}
				li {
					height: 100%;
					@media screen and (max-width: 768px) {
						font-size: 15px;
						width: 25%;
					}
					@media screen and (max-width: 480px) {
						width: 100px;
					}
					a,
					span {
						color: var(--tertiary-color);
						display: flex;
						justify-content: center;
						align-items: center;
						gap: 5px;
						width: 100%;
						height: 100%;
						padding: 20px;
						box-sizing: border-box;
						@media screen and (max-width: 768px) {
							padding: 20px 15px;
						}
						&:hover,
						&.active {
							background-color: var(--quaternary-color);
							color: var(--tertiary-color);
							transition: 0.5s;
						}
					}
					span .locale-flag {
						border: 1.5px solid var(--tertiary-color);
						padding: 2px;
					}
				}
			}
		}
		&__extra {
			grid-column-start: 3;
			@media screen and (max-width: 768px) {
				// grid-column-start: inherit;
				grid-row-start: 2;
			}
			overflow: auto;
		}
	}
	hr {
		background-color: var(--tertiary-color);
		height: 1px;
		border: 0;
		grid-column: 1 / span 2;
		margin: 0;
		@media screen and (max-width: 768px) {
			grid-column: 1 / span 1;
		}
	}
}

